modified:   .project 	new file:   ASTRA_read.py 	modified:   BDOP_3D.py 	new file:   Data_Set.py 	modified:   Diag_efficiency.py 	modified:   Diags.py 	modified:   Distribution.py 	modified:   ECRad_Config.py modified:   ECRad_Pylib_debugging_kit.py 	modified:   ECRad_Results.py 	modified:   ECRad_Scenario.py 	modified:   ECRad_debugging_kit.py 	new file:   Fit_Methods.py 	modified:   Fitting.py 	new file:   Forward_Model.py 	modified:   GlobalSettings.py 	new file:   Objective_Functions.py 	new file:   Profile_Parametrization.py 	modified:   TB_communication.py 	new file:   U_file_maker.py 	new file:   W7X_utilities.py 	modified:   distribution_io.py modified:   plotting_configuration.py 	modified:   plotting_core.py 	new file:   quick_visualizations.py 	modified:   run_ECFM_no_GUI.py 	modified:   shotfile_handling_AUG.py 	modified:   shotfile_handling_TCV.py
 Untracked files:
	.pydevproject

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>ECRad_Pylib</name>
 	<comment></comment>
 	<projects>
+		<project>Mconf</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
