--- a/meta.yaml
+++ b/meta.yaml
@@ -1,13 +1,13 @@
 package: 
   name: ecrad_pylib
-  version: 1.0.1
+  version: 1.0.2
 
 source:
-  git_rev: 1.0.1
+  git_rev: 1.0.2
   git_url: https://github.com/AreWeDreaming/ECRad_core
 requirements:
     build:
-      - python =3.7
+      - python =>3.7
       - numpy >=1.21
       - pip >=21.0
       - setuptools >=57.4
@@ -21,6 +21,6 @@ requirements:
       - netcdf4 >=1.5.6
       - h5py
       - wxpython
-      - conda-forge::f90nml >=1.3.1
-      - AreWeDreaming::plasma_math_tools
-      - AreWeDreaming::ecrad_core
+      - f90nml >=1.3.1
+      - plasma_math_tools
+      - ecrad_core
