--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = ecrad_pylib
 version = 1.0.1
 author = Severin S. Denk
 author_email = arewedreamingcode@gmail.com
-description = Physics core of the Electron Cyclotron Radation transport code for Advanced Data analysis (ECRad)
+description = Postprocessing and utility library for the Electron Cyclotron Radation transport code for Advanced Data analysis (ECRad)
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/AreWeDreaming/ECRad_PyLib
