--- a/meta.yaml
+++ b/meta.yaml
@@ -1,9 +1,9 @@
 package: 
   name: ecrad_pylib
-  version: 1.0.2
+  version: 1.0.3
 
 source:
-  git_rev: 1.0.2
+  git_rev: 1.0.3
   git_url: https://github.com/AreWeDreaming/ECRad_core
 requirements:
     build:
@@ -13,9 +13,9 @@ requirements:
       - setuptools >=57.4
       - build >=0.7
     run:
-      - python =3.7
+      - python >=3.7
       - numpy >=1.21
-      - scipy
+      - scipy >=1.7.3
       - matplotlib
       - hdf5
       - netcdf4 >=1.5.6
