--- a/meta.yaml
+++ b/meta.yaml
@@ -1,13 +1,13 @@
 package: 
   name: ecrad_pylib
-  version: 1.0.10
+  version: 1.0.11
 
 source:
-  git_rev: 1.0.10
+  git_rev: 1.0.11
   git_url: https://github.com/AreWeDreaming/ECRad_PyLib
 requirements:
     build:
-      - python =>3.7
+      - python >=3.7
       - numpy >=1.21
       - pip >=21.0
       - setuptools >=57.4
