Tons of bugfixes

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ecrad_pylib
-version = 1.0.11
+version =  attr: ecrad_pylib.__version__
 author = Severin S. Denk
 author_email = arewedreamingcode@gmail.com
 description = Postprocessing and utility library for the Electron Cyclotron Radation transport code for Advanced Data analysis (ECRad)
