--- a/meta.yaml
+++ b/meta.yaml
@@ -1,9 +1,9 @@
 package: 
   name: ecrad_pylib
-  version: 1.0.12
+  version: 1.0.13
 
 source:
-  git_rev: 1.0.12
+  git_rev: 1.0.13
   git_url: https://github.com/AreWeDreaming/ECRad_PyLib
 requirements:
     build:
@@ -24,3 +24,4 @@ requirements:
       - f90nml >=1.3.1
       - plasma_math_tools
       - ecrad_core
+      - omas
