--- a/recipe.yaml
+++ b/recipe.yaml
@@ -13,13 +13,13 @@ build:
 
 requirements:
   build:
-    - python >=3.7
+    - python
     - numpy >=1.21
     - pip >=21.0
     - setuptools >=57.4
     - build >=0.7
   run:
-    - python >=3.7
+    - python
     - numpy >=1.21
     - scipy >=1.7.3
     - matplotlib
